Do not run the image, as it will get stuck, and clean up

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,3 +4,11 @@ node_js:
 
 services:
     - docker
+
+install:
+    - docker build -t dns-propagation-checker .
+    #- docker run -it -p 3000:3000 dns-propagation-checker
+
+after_install:
+    - docker rm -f dns-propagation-checker
+    - docker images -q | xargs docker rmi -f
