--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "btoa": "^1.2.1",
         "cross-env": "^5.2.0",
         "express": "^4.16.4",
+        "express-rate-limit": "^5.0.0",
         "node-sass": "^4.13.0",
         "normalize.scss": "^0.1.0",
         "nuxt": "latest",
