Moving app to src directory and minor CI changes (#7)
* Moving to src

* Using deploy instead of install

* Generic programming language

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,14 @@
-language: node_js
-node_js:
-    - 13
+language: generic
 
 services:
-    - docker
+  - docker
 
-install:
-    - docker build -t dns-propagation-checker .
-    #- docker run -it -p 3000:3000 dns-propagation-checker
+deploy:
+  - provider: script
+    script: docker build -t dns-propagation-checker .
+    on:
+      all_branches: true
 
 after_install:
-    - docker rm -f dns-propagation-checker
-    - docker images -q | xargs docker rmi -f
+  - docker rm -f dns-propagation-checker
+  - docker images -q | xargs docker rmi -f
