--- a/src/package.json
+++ b/src/package.json
@@ -27,7 +27,7 @@
 		"express-rate-limit": "^5.0.0",
 		"node-sass": "^4.13.0",
 		"normalize.scss": "^0.1.0",
-		"nuxt": "latest",
+		"nuxt": "^2.14.5",
 		"sass-loader": "^8.0.0",
 		"shelljs": "^0.8.3",
 		"source-map-support": "^0.4.18",
